fixes list alignment

--- a/assets/css/components/_list-responsive.scss
+++ b/assets/css/components/_list-responsive.scss
@@ -49,7 +49,6 @@
   .services-list-col {
     width: 100%;
     font-size: 13pt;
-    text-align: center;
   }
 
   .list-item-with-icon {
