--- a/assets/css/components/_list.scss
+++ b/assets/css/components/_list.scss
@@ -2,7 +2,7 @@
   .list-item-with-icon {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 
     h5 {
